--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ DEBUG=True
 # 本地開發數據庫設置
 DB_NAME=mini_project
 DB_USER=hsh
-DB_PASSWORD= '@Aa82851620'
+DB_PASSWORD="@Aa82851620"
 DB_HOST=localhost
 DB_PORT=5432  # PostgreSQL 端口，根據實際使用的數據庫修改
 
